# rcp_task_acquisition

./: .gitignore  README.md  local_run.py  main.py  participants.db  pyproject.toml  setup.py
.github/workflows/: auto_version.yml
config_files/: taskconfig.yaml  userdata.yaml
models/: CameraFrontend.py  CameraProcess.py  LabjackFrontend.py  LabjackProcess.py  Serial.py  StimulusThread.py  VideoThread.py
multiCam_DLC/: multiCam_DLC_utils_v2.py  multiCam_DLC_videoAcquisition_v1.py
panels/: ControlsPanel.py  GraphPanel.py  HardwarePanel.py  ImagePanel.py  LaunchPanel.py  MainFrame.py  MetadataPanel.py  SwitchPanel.py  TaskPanel.py  TrialPanel.py
rcp_task_acquisition/: __main__.py
rcp_task_acquisition/models/: CameraFrontend.py  CameraProcess.py  Crop.py  LabjackFrontend.py  LabjackProcess.py  SerialDevice.py  StimulusThread.py  Trials.py  VideoThread.py  Warnings.py
rcp_task_acquisition/multiCam_DLC/: .buildconfig  compressVideos_v3.py  multiCam_DLC_utils_v2.py
rcp_task_acquisition/panels/: ControlsPanel.py  GraphPanel.py  HardwarePanel.py  ImagePanel.py  LaunchPanel.py  MainFrame.py  MetadataPanel.py  StartPanel.py  SwitchPanel.py  TaskPanel.py  TrialPanel.py
rcp_task_acquisition/tasks/: HardwareTest.py  bases.py
rcp_task_acquisition/utils/: camera_utils.py  constants.py  displays.py  enums.py  feedback.py  file_utils.py  logger.py  task_acquisistion_version.py
tasks/: bases.py
testing/: color_convert.py  labjack_test.py  random_number_generator.py
utils/: constants.py  displays.py  file_utils.py  logger.py  task_acquisistion_version.py
(+101 files in other folders)
