[build-system]
requires = ["setuptools>=61.0",
		 "setuptools-scm>= 9.2.2, < 10"]
build-backend = "setuptools.build_meta"


[project]
name = "rcp-task-acquisition"
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.10, <3.11"



[project.scripts]
rcp-task-acquisition = "rcp_task_acquisition.__main__:run_app"
create-shortcut = "rcp_task_acquisition.utils.shortcut:create_shortcut"

[tool.setuptools_scm]